--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.13</version>
         </dependency>    
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>6.4.0.jre8</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -57,6 +62,16 @@
                 </executions>
                 <configuration>
                     <finalName>uber-${artifactId}-${version}</finalName>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>                   
                 </configuration>
             </plugin>
         </plugins>
